--- a/publicar.html
+++ b/publicar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>WeAreDogsLovers</title>
 </head>
@@ -35,11 +36,17 @@
                     <p><label for=""> Hasta </label><input type="date" name="" id=""></p>
                     <p><input type="radio" name="" value=""><label for="">Adopción permanente</label></p>     
             <p><h2>Características del perro</h2></p>
-                    <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-                <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-                    <p><input type="radio" name="" value=""><label for="">Hembras</label>
-                <input type="radio" name="" value=""><label for="">Machos</label></p>
-            <p><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
+            <select    class="espacio" class="form-select" aria-label="Default select example">
+                <option selected> Tamaño del perro </option>
+                <option value="1">Perros grandes</option>
+                <option value="2">Perros pequeños</option>
+              </select>
+            <select    class="espacio" class="form-select" aria-label="Default select example">
+                <option selected> Edad del perro </option>
+                <option value="1"> Cachorros </option>
+                <option value="2"> Adultos </option>
+            </select>   
+            <p></p>
             <p><label for=""> Cargar imagen aquí </label><input type="url" name="" id=""></p> <!-- CONSULTA 1 ¿Existe y/o vamos a aprender una opción para que el usuario pueda cargar su imagen?=-->
             <p><input type="submit"value="ENVIAR"/></p>    
         </form>
@@ -48,5 +55,6 @@
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
