--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -24,49 +24,31 @@
     </HEAder>
     <main class="sec2-caja-grande"> 
         <div    class="fotos-caja-chica">
-            <img src="images/perrorelleno2.jpg" alt="dos perritos">
-           <form action="">
-           <p > <label for=""> Publicado por </label> <input type="name"></p>
-           <p  > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-           <p ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-           <p>Características del perro</p>
-           <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-               <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-           <p><input type="radio" name="" value=""><label for="">Hembras</label>
-               <input type="radio" name="" value=""><label for="">Machos</label></p>
-           <p ><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-           <!-- La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-       </form>
+            <img src="images/perrorelleno2.jpg" alt="dos perritos upa chiquitos">
+            <p>Publicado por: Fede Mazzon</p>
+            <p>Mail: fede-mazzon@gmail.com</p>
+            <p>Teléfono: 342 7239994</p>
+            <p>Lolo y Pocho buscan adopción permanente</p>
+            <p>Tamaño estimado: Perros grandes </p>
     </div>
     <div class="fotos-caja-chica">   
-       <img src="images/felipe.jpg" alt="un perro">
+       <img src="images/felipe.jpg" alt="Perrito en su antes/después">
        <form action="">
-           <p  > <label for=""> Publicado por </label> <input type="name"></p>
-           <p > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-           <p  ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-           <p>Características del perro</p>
-           <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-               <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-           <p><input type="radio" name="" value=""><label for="">Hembras</label>
-               <input type="radio" name="" value=""><label for="">Machos</label></p>
-           <p ><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-          <!-- IDEM COMENTARIO ANTERIOR: La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-       </form>
+        <p>Publicado por: Cele A</p>
+        <p>Mail:cele-astesian-22@gmail.com</p>
+        <p>Teléfono: 34256794</p>
+        <p>Feli busca tránsito por vacaciones </p> 
+        <p>DESDE 7/5/2022 HASTA 10/06/2022</p> 
+        <p>Tamaño estimado: Perros pequeños </p>
     </div>
      <div class="fotos-caja-chica">
-       <img src="images/refug2.jpg" alt="un perro">
-       <form action="">
-           <p  > <label for=""> Publicado por </label> <input type="name"></p>
-           <p  > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-           <p  ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-           <p>Características del perro</p>
-           <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-               <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-           <p><input type="radio" name="" value=""><label for="">Hembras</label>
-               <input type="radio" name="" value=""><label for="">Machos</label></p>
-           <p  ><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-          <!-- IDEM COMENTARIO ANTERIOR: La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-       </form>
+       <img src="images/refug2.jpg" alt="Perrito pequeño marron">
+       <p>Publicado por: María Petrozo</p>
+        <p>Mail:mari.petro@gmail.com</p>
+        <p>Teléfono: 34256676794</p>
+        <p>Rolo busca tránsito por vacaciones </p>
+        <p>DESDE 23/9/2022 HASTA 10/11/2022</p>
+        <p>Tamaño estimado: Perros pequeños</p>
     </div>         
         </main>
     <footer>
