--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -24,49 +24,28 @@
     </HEAder>
     <MAIN   class="sec2-caja-grande">
             <div class="fotos-caja-chica">
-                <img src="images/reguf3.jpg" alt="perro">
-                <form action="">
-                    <p > <label for=""> Publicado por </label> <input type="name"></p>
-                    <p > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-                    <p ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-                    <p>Características del perro</p>
-                    <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-                        <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-                    <p><input type="radio" name="" value=""><label for="">Hembras</label>
-                        <input type="radio" name="" value=""><label for="">Machos</label></p>
-                    <p><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-                    <!-- La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-                </form>
+                <img src="images/reguf3.jpg" alt="Perrito marrón acostado">
+               <p>Publicado por: Tami Leone</p>
+               <p>Mail: tami.leone@hotmail.com</p>
+               <p>Teléfono: 342 5879994</p>
+               <p>Chary busca adopción permanente</p>
+               <p>Tamaño: Perros grandes </p>
             </div>
             <div class="fotos-caja-chica">
-                <img src="images/perrorelleno.jpg" alt=perro">
-                <form action="">
-                    <p > <label for=""> Publicado por </label> <input type="name"></p>
-                    <p > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-                    <p ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-                    <p>Características del perro</p>
-                    <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-                        <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-                    <p><input type="radio" name="" value=""><label for="">Hembras</label>
-                        <input type="radio" name="" value=""><label for="">Machos</label></p>
-                    <p ><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-                   <!-- IDEM COMENTARIO ANTERIOR: La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-                </form>
+                <img src="images/perrorelleno.jpg" alt="Perrito marrón sonriente">
+                <p>Publicado por: Caro Leiva</p>
+                <p>Mail: caro.l@hotmail.com</p>
+                <p>Teléfono: 342 586735</p>
+                <p>Pepita busca adopción permanente</p>
+                <p>Tamaño: Perros grandes </p>  
             </div>
             <div class="fotos-caja-chica">
-                <img src="images/refug1.jpg" alt="perro">
-              <form action="">
-                    <p > <label for=""> Publicado por </label> <input type="name"></p>
-                    <p > <label for=""> E-Mail </label><input type="email" name="" id=""></p>
-                    <p ><label for=""> Número de teléfono </label><input type="phonenumber" name="" id=""></p>
-                    <p>Características del perro</p>
-                    <p><input type="radio" name="" value=""><label for="">Perros adultos</label>
-                        <input type="radio" name="" value=""><label for="">Perros cachorros</label></p>
-                    <p><input type="radio" name="" value=""><label for="">Hembras</label>
-                        <input type="radio" name="" value=""><label for="">Machos</label></p>
-                    <p><label for=""> Otros datos de interés</label>   <input type="text" name="" id=""></p>
-                    <!-- IDEM COMENTARIO ANTERIOR: La idea es que el contenido que el usuario publique en el formulario, aparezca aquí. Por eso abajo de cada imagen del perro están esos mismos datos, para que quien busca, se pueda contactar con quien publica-->
-            </form>   
+                <img src="images/refug1.jpg" alt="Perrito blanco y marrón sonriente">
+                <p>Publicado por: Jeremias Rebel </p>
+                <p>Mail: jeremias-r@gmail.com</p>
+                <p>Teléfono: 342 598994</p>
+                <p>Coco busca adopción permanente</p>
+                <p>Tamaño: Perros grandes </p> 
             </div>
     </MAIN>
     <footer>
