--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
     <title>WeAreDogsLovers</title>
 </head>
@@ -25,77 +24,29 @@
     <section><h1>Enamórate de estas historias y conviértete en la próxima adopción feliz</h1></section>   
     <MAIN>
             <h2>Historias felices</h2>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="images/hada.jpg" class="d-block w-100" alt="perrita feliz en su antes y despues">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5></h5>
-                      <p></p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/margui.jpg" class="d-block w-100" alt="perrita abrazada por nena">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5></h5>
-                      <p></p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="images/cleo.jpg" class="d-block w-100" alt="perrita feliz">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5></h5>
-                      <p></p>
-                    </div>
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-    </main>
-    <aside>
+            <p>¡Ellos ya se encontraron!</p>
+        <div   class="index-caja-chica">
+            <img src="images/hada.jpg" alt="perrita adoptada en su antes y después">
+            <img src="images/margui.jpg" alt="perrita adoptada abrazando a una nena">
+            <img src="images/cleo.jpg" alt="perrita adoptada en la playa contenta">
+            <img src="images/amapola.jpg" alt="perrita adoptada siendo abrazada por su dueña">
+            <img src="images/piru.jpg" alt="perrito adoptado con ropita arriba de la cama">
+            <img src="images/histfelizrefugio.jpg" alt="perrito adoptado en su antes y después">
+            </div>
+    </MAIN>   
+    <aside>  
         <h2>Encuentra a tu mejor amigo</h2>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <p> ¿Cómo? ¡Simplemente haciendo click sobre la imagen!</p>
+            <div    class="index-caja-chica">
+            <a href="perros-cachorros.html"><img src="images/felipe.jpg" alt="perrito en adopción antes de su tránsito y después"></a>
+            <a href="perros-adultos.html"><img src="images/refug1.jpg" alt="perrito en adopción en su refugio"></a>
+            <a href="perros-cachorros.html"><img src="images/refug2.jpg" alt="perrito en adopción en su refugio"></a>
+            <a href="perros-adultos.html"><img src="images/reguf3.jpg" alt="perrito en adopción en su refugio"></a>
+            <a href="perros-adultos.html"><img src="images/perrorelleno.jpg" alt="perrito en adopción en su refugio"></a>
+            <a href="perros-cachorros.html"><img src="images/perrorelleno2.jpg" alt="perrito en adopción en su refugio"></a>
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="images/felipe.jpg" class="d-block w-100" alt="perrito en su antes y después">
-              </div>
-              <div class="carousel-item">
-                <img src="images/refug1.jpg" class="d-block w-100" alt="perrito en adopción">
-              </div>
-              <div class="carousel-item">
-                <img src="images/piru.jpg" class="d-block w-100" alt="perrito con ropa">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
     </aside>
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-</html>
