--- a/adoptar.html
+++ b/adoptar.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Adopta, no compres, encontrá a tu perro ideal, sin clientes no hay maltrato">
+    <meta name="keywords" content="ADOPTAR, NO COMPRAR, RESCATAR, NO AL COMERCIO, TAMAÑOS Y EDADES VARIADAS">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title> DOGS LOVERS - Adopta un perrito </title>
 </head>
 <body   class="contenedor-adoptar">
     <HEAder>
@@ -23,10 +25,11 @@
         </NAv>
     </HEAder>
     <MAIN>
+        <h1>¡Existe el perro ideal para ti! ¡Encuentrálo!</h1>
         <div    class="adoptar"><a href="perros-adultos.html">Perros adultos
-            <p><img src="images/adultos.jpg" alt="perro acostado tranquilo"></a></p></div>
+            <p><img src="images/adultos.jpg" alt="Perro acostado tranquilo"></a></p></div>
         <div    class="adoptar"><a href="perros-cachorros.html">Perros cachorros
-            <p><img src="images/cachorros.jpg" alt="perro sentado juguetón"></p></a></div>
+            <p><img src="images/cachorros.jpg" alt="Perro sentado juguetón"></p></a></div>
     </MAIN>
     <footer>
         <p>&COPY;   Tamara Leone</p>
