--- a/mision.html
+++ b/mision.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="DESEAMOS UN MUNDO LIBRE DE MALTRATO Y COMPRAVENTA DE PERROS">
+    <meta name="keywords" content="RESCATAR, ADOPTAR, SALVAR, REFUGIOS, FAMILIA">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title>DOGS LOVERS - Proteccionismo animal </title>
 </head>
 <body   class="contenedor-mision">
     <HEAder> 
@@ -22,7 +24,7 @@
         </NAv>
     </HEAder>
     <section>
-        <h1>Te contamos sobre nosotros</h1>
+        <h1> Nosotros - Nuestra misión </h1>
     </section>
     <MAIN   class="mision-caja-chica">
             <h2> Nosotros </h2>
