--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ADOPTA UN ADULTO Y CAMBIA TU VIDA. COMPAÑIA IDEAL">
+    <meta name="keywords" content="ADULTOS, PERROS TRANQUILOS, CAMBIA UNA VIDA">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title>DOGS LOVERS - Adopta un adulto, cambia una vida </title>
 </head>
 <body   class="contenedor-seccion2">
     <HEAder>
@@ -22,7 +24,9 @@
                   
         </NAv>
     </HEAder>
-    <MAIN   class="sec2-caja-grande">
+    <MAIN>
+        <h1>Adoptá un adulto y cambia una vida... ¡La tuya!</h1>
+        <div class="sec2-caja-grande">
             <div class="fotos-caja-chica">
                 <img src="images/reguf3.jpg" alt="Perrito marrón acostado">
                <p>Publicado por: Tami Leone</p>
@@ -47,6 +51,7 @@
                 <p>Coco busca adopción permanente</p>
                 <p>Tamaño: Perros grandes </p> 
             </div>
+        </div>
     </MAIN>
     <footer>
         <p>&COPY;   Tamara Leone</p>
