--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ADOPTA UN CACHORRO Y ALEGRA TU HOGAR">
+    <meta name="keywords" content="CACHORROS, MIEMBROS FAMILIA, AMOR, PERRITOS, PEQUEÑOS">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title> DOGS LOVERS - Perritos cachorros para adoptar </title>
 </head>
 <body   class="contenedor-seccion2">
     <HEAder>
@@ -22,9 +24,11 @@
                   
         </NAv>
     </HEAder>
-    <main class="sec2-caja-grande"> 
+    <main> 
+        <h1>¡Adoptá un cachorro y revolucioná tu hogar!</h1>
+        <div class="sec2-caja-grande">
         <div    class="fotos-caja-chica">
-            <img src="images/perrorelleno2.jpg" alt="dos perritos upa chiquitos">
+            <img src="images/perrorelleno2.jpg" alt="Dos perritos upa chiquitos">
             <p>Publicado por: Fede Mazzon</p>
             <p>Mail: fede-mazzon@gmail.com</p>
             <p>Teléfono: 342 7239994</p>
@@ -49,7 +53,8 @@
         <p>Rolo busca tránsito por vacaciones </p>
         <p>DESDE 23/9/2022 HASTA 10/11/2022</p>
         <p>Tamaño estimado: Perros pequeños</p>
-    </div>         
+    </div>  
+    </div>       
         </main>
     <footer>
         <p>&COPY;   Tamara Leone</p>
