--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="ADOPCION Y HOGAR PARA PERROS">
+    <meta name="keywords" content="ADOPCIÓN, PETFRIENDLY, DOGSLOVERS, PROTECCIONISMO">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title>DOGS LOVERS - Encuentra tu perro ideal</title>
 </head>
 <body   class="contenedor-index">
     <HEAder>
