--- a/publicar.html
+++ b/publicar.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AYUDA ANIMAL COMPARTIENDO, PUBLICANDO, EN RED">
+    <meta name="keywords" content="ADOPCIÓN, AYUDA, APORTA, DONACION, ENCONTRA, COMPARTIR">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title>DOGS LOVERS - Publica, comparti, trabajemos en red </title>
 </head>
 <body   class="contenedor-publicar">
     <HEAder>
@@ -22,9 +24,8 @@
             </ul>         
         </NAv>
     </HEAder>
-    <MAIN   class="espacio-formulario">
-        <h1>Formulario de contacto para publicar un perrito</h1>
-        <p></p>
+    <MAIN >
+        <h1 >Formulario de contacto para publicar un perrito</h1>
        <div>
         <form action="">
             <p><label for=""> Nombre </label> <input type=""name=""></p>
