--- a/transito.html
+++ b/transito.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="UN INVITADO DE CUATRO PATAS DURANTE EL TIEMPO QUE PUEDAS">
+    <meta name="keywords" content="TRANSITO, HOGAR TEMPORAL, CUIDADO ANIMAL, PERROS COMUNITARIOS">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
-    <title>WeAreDogsLovers</title>
+    <title> DOGS LOVERS - Cuida un perrito el tiempo que puedas</title>
 </head>
 <body   class="contenedor-transitar">
     <HEAder>
@@ -23,9 +25,8 @@
         </NAv>
     </HEAder>
     
-    <MAIN   class="espacio">  
-        <h1>Elige transitar la opción que más se amolde a ti</h1>
-        <p></p>
+    <MAIN>  
+        <h1 class="h1formularios" >Elige transitar la opción que más se amolde a ti</h1>
             <form action=""> 
                 <h2>Características del perro</h2>
                 <select    class="espacio" class="form-select" aria-label="Default select example">
