--- a/transito.html
+++ b/transito.html
@@ -26,7 +26,7 @@
     </HEAder>
     
     <MAIN>  
-        <h1 class="h1formularios" >Elige transitar la opción que más se amolde a ti</h1>
+        <h1>Elige transitar la opción que más se amolde a ti</h1>
             <form action=""> 
                 <h2>Características del perro</h2>
                 <select    class="espacio" class="form-select" aria-label="Default select example">
