mejorados todos los responsive-faltan los formularios

--- a/adoptar.html
+++ b/adoptar.html
@@ -24,8 +24,8 @@
                   
         </NAv>
     </HEAder>
-    <MAIN>
-        <h1>¡Existe el perro ideal para ti! ¡Encuentrálo!</h1>
+    <section><h1>¡Existe el perro ideal para ti! ¡Encuentrálo!</h1></section>
+    <MAIN> 
         <div    class="adoptar"><a href="perros-adultos.html">Perros adultos
             <p><img src="images/adultos.jpg" alt="Perro acostado tranquilo"></a></p></div>
         <div    class="adoptar"><a href="perros-cachorros.html">Perros cachorros
