--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -24,8 +24,8 @@
                   
         </NAv>
     </HEAder>
+    <section> <h1>Adoptá un adulto y cambia una vida... ¡La tuya!</h1></section>
     <MAIN>
-        <h1>Adoptá un adulto y cambia una vida... ¡La tuya!</h1>
         <div class="sec2-caja-grande">
             <div class="fotos-caja-chica">
                 <img src="images/reguf3.jpg" alt="Perrito marrón acostado">
