--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -24,8 +24,8 @@
                   
         </NAv>
     </HEAder>
+    <section><h1>¡Adoptá un cachorro y revolucioná tu hogar!</h1></section>
     <main> 
-        <h1>¡Adoptá un cachorro y revolucioná tu hogar!</h1>
         <div class="sec2-caja-grande">
         <div    class="fotos-caja-chica">
             <img src="images/perrorelleno2.jpg" alt="Dos perritos upa chiquitos">
