--- a/publicar.html
+++ b/publicar.html
@@ -24,8 +24,8 @@
             </ul>         
         </NAv>
     </HEAder>
+    <section> <h1 >Formulario de contacto para publicar un perrito</h1></section>
     <MAIN >
-        <h1 >Formulario de contacto para publicar un perrito</h1>
        <div>
         <form action="">
             <p><label for=""> Nombre </label> <input type=""name=""></p>
