--- a/transito.html
+++ b/transito.html
@@ -24,9 +24,8 @@
             </ul>         
         </NAv>
     </HEAder>
-    
+    <section> <h1>Elige transitar la opción que más se amolde a ti</h1></section>
     <MAIN>  
-        <h1>Elige transitar la opción que más se amolde a ti</h1>
             <form action=""> 
                 <h2>Características del perro</h2>
                 <select    class="espacio" class="form-select" aria-label="Default select example">
