mejoras responsive y estilo

--- a/publicar.html
+++ b/publicar.html
@@ -24,19 +24,19 @@
             </ul>         
         </NAv>
     </HEAder>
-    <section> <h1 >Formulario de contacto para publicar un perrito</h1></section>
+    <section> <h1 class="H1boot" >Formulario de contacto para publicar un perrito</h1></section>
     <MAIN >
        <div>
         <form action="">
             <p><label for=""> Nombre </label> <input type=""name=""></p>
             <p><label for=""> Email </label> <input type="email" name="" id=""></p>
             <p><label for=""> Número de teléfono </label><input type="tel" name="" id=""></p>
-            <p> <h2>Clase de publicación</h2></p>                    
+            <p> <h2 class="H1boot">Clase de publicación</h2></p>                    
                     <p><input type="radio" name="" value=""><label for="">Tránsito/Guardería por vacaciones</label></p>
                     <p><label for=""> Desde </label><input type="date" name="" id=""></p>
                     <p><label for=""> Hasta </label><input type="date" name="" id=""></p>
                     <p><input type="radio" name="" value=""><label for="">Adopción permanente</label></p>     
-            <p><h2>Características del perro</h2></p>
+            <p><h2 class="H1boot">Características del perro</h2></p>
             <select    class="espacio" class="form-select" aria-label="Default select example">
                 <option selected> Tamaño del perro </option>
                 <option value="1">Perros grandes</option>
