--- a/transito.html
+++ b/transito.html
@@ -24,10 +24,10 @@
             </ul>         
         </NAv>
     </HEAder>
-    <section> <h1>Elige transitar la opción que más se amolde a ti</h1></section>
+    <section> <h1 class="H1boot">Elige transitar la opción que más se amolde a ti</h1></section>
     <MAIN>  
             <form action=""> 
-                <h2>Características del perro</h2>
+                <h2 class="H1boot">Características del perro</h2>
                 <select    class="espacio" class="form-select" aria-label="Default select example">
                     <option selected> Tamaño del perro </option>
                     <option value="1">Perros grandes</option>
@@ -38,7 +38,7 @@
                     <option value="1"> Cachorros </option>
                     <option value="2"> Adultos </option>
                   </select>
-            <h2> Plazo disponible</h2>
+            <h2 class="H1boot"> Plazo disponible</h2>
                 <p><label for=""> Desde </label><input type="date" name="" id=""></p>
                 <p><label for=""> Hasta </label><input type="date" name="" id=""></p>
                 <p><input type="radio" name="" value=""><label for=""> TIEMPO ILIMITADO </label></p>
