--- a/adoptar.html
+++ b/adoptar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Adopta, no compres, encontrá a tu perro ideal, sin clientes no hay maltrato">
     <meta name="keywords" content="ADOPTAR, NO COMPRAR, RESCATAR, NO AL COMERCIO, TAMAÑOS Y EDADES VARIADAS">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
     <title> DOGS LOVERS - Adopta un perrito </title>
 </head>
@@ -34,5 +35,6 @@
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
