--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="ADOPCION Y HOGAR PARA PERROS">
     <meta name="keywords" content="ADOPCIÓN, PETFRIENDLY, DOGSLOVERS, PROTECCIONISMO">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
     <title>DOGS LOVERS - Encuentra tu perro ideal</title>
 </head>
@@ -51,4 +52,5 @@
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
