--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ADOPTA UN ADULTO Y CAMBIA TU VIDA. COMPAÑIA IDEAL">
     <meta name="keywords" content="ADULTOS, PERROS TRANQUILOS, CAMBIA UNA VIDA">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
     <title>DOGS LOVERS - Adopta un adulto, cambia una vida </title>
 </head>
@@ -56,5 +57,6 @@
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
