--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ADOPTA UN CACHORRO Y ALEGRA TU HOGAR">
     <meta name="keywords" content="CACHORROS, MIEMBROS FAMILIA, AMOR, PERRITOS, PEQUEÑOS">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/style.css">
     <title> DOGS LOVERS - Perritos cachorros para adoptar </title>
 </head>
@@ -27,15 +28,15 @@
     <section><h1>¡Adoptá un cachorro y revolucioná tu hogar!</h1></section>
     <main> 
         <div class="sec2-caja-grande">
-        <div    class="fotos-caja-chica">
+            <div    class="fotos-caja-chica">
             <img src="images/perrorelleno2.jpg" alt="Dos perritos upa chiquitos">
             <p>Publicado por: Fede Mazzon</p>
             <p>Mail: fede-mazzon@gmail.com</p>
             <p>Teléfono: 342 7239994</p>
             <p>Lolo y Pocho buscan adopción permanente</p>
             <p>Tamaño estimado: Perros grandes </p>
-    </div>
-    <div class="fotos-caja-chica">   
+        </div>
+        <div class="fotos-caja-chica">   
        <img src="images/felipe.jpg" alt="Perrito en su antes/después">
        <form action="">
         <p>Publicado por: Cele A</p>
@@ -44,20 +45,21 @@
         <p>Feli busca tránsito por vacaciones </p> 
         <p>DESDE 7/5/2022 HASTA 10/06/2022</p> 
         <p>Tamaño estimado: Perros pequeños </p>
-    </div>
-     <div class="fotos-caja-chica">
-       <img src="images/refug2.jpg" alt="Perrito pequeño marron">
-       <p>Publicado por: María Petrozo</p>
+        </div>
+        <div class="fotos-caja-chica">
+        <img src="images/refug2.jpg" alt="Perrito pequeño marron">
+        <p>Publicado por: María Petrozo</p>
         <p>Mail:mari.petro@gmail.com</p>
         <p>Teléfono: 34256676794</p>
         <p>Rolo busca tránsito por vacaciones </p>
         <p>DESDE 23/9/2022 HASTA 10/11/2022</p>
         <p>Tamaño estimado: Perros pequeños</p>
-    </div>  
+        </div>  
     </div>       
         </main>
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
