--- a/adoptar.html
+++ b/adoptar.html
@@ -25,7 +25,7 @@
                   
         </NAv>
     </HEAder>
-    <section><h1>¡Existe el perro ideal para ti! ¡Encuentrálo!</h1></section>
+    <section><h1 class="H1boot">¡Existe el perro ideal para ti! ¡Encuentrálo!</h1></section>
     <MAIN> 
         <div    class="adoptar"><a href="perros-adultos.html">Perros adultos
             <p><img src="images/adultos.jpg" alt="Perro acostado tranquilo"></a></p></div>
