--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </ul>         
         </NAv>
     </HEAder>
-    <section><h1>Enamórate de estas historias y conviértete en la próxima adopción feliz</h1></section>   
+    <section><h1   class="H1boot">Enamórate de estas historias y conviértete en la próxima adopción feliz</h1></section>   
     <MAIN>
-            <h2>Historias felices</h2>
+            <h2 class="H1boot">Historias felices</h2>
             <p>¡Ellos ya se encontraron!</p>
         <div   class="index-caja-chica">
             <img src="images/hada.jpg" alt="perrita adoptada en su antes y después">
@@ -38,7 +38,7 @@
             </div>
     </MAIN>   
     <aside>  
-        <h2>Encuentra a tu mejor amigo</h2>
+        <h2 class="H1boot">Encuentra a tu mejor amigo</h2>
         <p> ¿Cómo? ¡Simplemente haciendo click sobre la imagen!</p>
             <div    class="index-caja-chica">
             <a href="perros-cachorros.html"><img src="images/felipe.jpg" alt="perrito en adopción antes de su tránsito y después"></a>
