--- a/mision.html
+++ b/mision.html
@@ -25,14 +25,14 @@
         </NAv>
     </HEAder>
     <section>
-        <h1> Nosotros - Nuestra misión </h1>
+        <h1 class="H1boot"> Nosotros - Nuestra misión </h1>
     </section>
     <MAIN   class="mision-caja-chica">
-            <h2> Nosotros </h2>
+            <h2 class="H1boot"> Nosotros </h2>
             Somos un grupoum dolor sit amet oluit Loreit. Vel incidunt numquam, impellat. Minus fugiat, est magni aut voluptates ipsam asperiores consequuntur, incidunt architecto ducimus esse aspernatur. molest obitis illo ullam factemporibus quam aut suscipit ea. dolorem mro minus esse quis molestias ullam minima. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut nostrum tempore et voluptates, porro laboriosam, quisquam, dolores iusto mollitia sed doloremque nam placeat alias animi quibusdam neque. Illo, tempore veritatis. Maxime quod quas eveniet iste sequi iure eius quia labore   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores quidem esse quisquam ut rem aliquid, maiores voluptate natus possimus unde sapiente ducimus veritatis nulla dolore quis nihil qui a ipsa!laborum voluptas dignissimos? Temporibus ab quae eligendi voluptatum sint, sit quo, aliquid obcaecati a, totam fugiat fuga adipisci blanditiis.possimus!Lorem<!-- Uso este texto basura para luego armar bien el texto-->
     </MAIN>
     <aside   class="mision-caja-chica">
-            <h2>Nuestra misión</h2>
+            <h2 class="H1boot">Nuestra misión</h2>
             Soñamos con un mundo libre de maltrato animaataharum quaerat eius iste reiciendis perferendis animi, culpa neque facilis sunt odio sit perspiciatis reprehenderit dolor? beatae quidem quos cum soluta totam, rem quas ips natus nisi fuga! Eaque quidem dolor id odio omnis repellat ipsa nam, in neque sequi illo. Reiciendis doloremque eius, nam itaque fugit incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam odio nobis numquam possimus et facilis ratione, nostrum laudantium accusantium voluptate corrupti amet nihil perferendis, autem, laboriosam nulla necessitatibus quis dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus veritatis velit sapiente soluta consectetur sunt ipsam explicabo excepturi nemo similique recusandae itaque voluptatibus nam, nesciunt adipisci nulla, exercitationem officiis ut?<!-- Uso este texto basura para luego armar bien el texto-->
     </aside>
     
