--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -25,7 +25,7 @@
                   
         </NAv>
     </HEAder>
-    <section> <h1>Adoptá un adulto y cambia una vida... ¡La tuya!</h1></section>
+    <section> <h1  class="H1boot">Adoptá un adulto y cambia una vida... ¡La tuya!</h1></section>
     <MAIN>
         <div class="sec2-caja-grande">
             <div class="fotos-caja-chica">
@@ -34,6 +34,7 @@
                <p>Mail: tami.leone@hotmail.com</p>
                <p>Teléfono: 342 5879994</p>
                <p>Chary busca adopción permanente</p>
+               <P>DESDE - HASTA - </P>
                <p>Tamaño: Perros grandes </p>
             </div>
             <div class="fotos-caja-chica">
@@ -42,6 +43,7 @@
                 <p>Mail: caro.l@hotmail.com</p>
                 <p>Teléfono: 342 586735</p>
                 <p>Pepita busca adopción permanente</p>
+                <P>DESDE - HASTA - </P>
                 <p>Tamaño: Perros grandes </p>  
             </div>
             <div class="fotos-caja-chica">
@@ -50,6 +52,7 @@
                 <p>Mail: jeremias-r@gmail.com</p>
                 <p>Teléfono: 342 598994</p>
                 <p>Coco busca adopción permanente</p>
+                <P>DESDE - HASTA - </P>
                 <p>Tamaño: Perros grandes </p> 
             </div>
         </div>
