--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -25,26 +25,28 @@
                   
         </NAv>
     </HEAder>
-    <section><h1>¡Adoptá un cachorro y revolucioná tu hogar!</h1></section>
-    <main> 
-        <div class="sec2-caja-grande">
-            <div    class="fotos-caja-chica">
-            <img src="images/perrorelleno2.jpg" alt="Dos perritos upa chiquitos">
-            <p>Publicado por: Fede Mazzon</p>
-            <p>Mail: fede-mazzon@gmail.com</p>
-            <p>Teléfono: 342 7239994</p>
-            <p>Lolo y Pocho buscan adopción permanente</p>
-            <p>Tamaño estimado: Perros grandes </p>
-        </div>
+    <section><h1   class="H1boot">¡Adoptá un cachorro y revolucioná tu hogar!</h1></section>
+    <main>
+    <div class="sec2-caja-grande">       
         <div class="fotos-caja-chica">   
-       <img src="images/felipe.jpg" alt="Perrito en su antes/después">
-       <form action="">
+        <img src="images/felipe.jpg" alt="Perrito en su antes/después">
+        <form action="">
         <p>Publicado por: Cele A</p>
         <p>Mail:cele-astesian-22@gmail.com</p>
         <p>Teléfono: 34256794</p>
         <p>Feli busca tránsito por vacaciones </p> 
         <p>DESDE 7/5/2022 HASTA 10/06/2022</p> 
         <p>Tamaño estimado: Perros pequeños </p>
+        </div>  
+        <div class="fotos-caja-chica">   
+        <img src="images/perrorelleno2.jpg" alt="Dos perritos upa chiquitos">
+        <form action="">
+        <p>Publicado por: Fede Mazzon</p>
+        <p>Mail:fede.m@gmail.com</p>
+        <p>Teléfono: 34254544</p>
+        <p>Lolo y Pocho buscan adopción permanente</p> 
+        <p>DESDE - HASTA -</p> 
+        <p>Tamaño estimado: Perros grandes </p>
         </div>
         <div class="fotos-caja-chica">
         <img src="images/refug2.jpg" alt="Perrito pequeño marron">
@@ -54,8 +56,8 @@
         <p>Rolo busca tránsito por vacaciones </p>
         <p>DESDE 23/9/2022 HASTA 10/11/2022</p>
         <p>Tamaño estimado: Perros pequeños</p>
-        </div>  
-    </div>       
+        </div>
+        </div>   
         </main>
     <footer>
         <p>&COPY;   Tamara Leone</p>
