--- a/publicar.html
+++ b/publicar.html
@@ -27,28 +27,37 @@
     <section> <h1 class="H1boot" >Formulario de contacto para publicar un perrito</h1></section>
     <MAIN >
        <div>
+           <p> <h2 class="H1boot"> Datos personales</h2></p>
         <form action="">
-            <p><label for=""> Nombre </label> <input type=""name=""></p>
-            <p><label for=""> Email </label> <input type="email" name="" id=""></p>
-            <p><label for=""> Número de teléfono </label><input type="tel" name="" id=""></p>
+            <p><label for=""> Nombre </label></p>              
+            <p><input type=""name=""></p>
+            <p><label for=""> Email </label></p> 
+            <p><input type="email" name="" id=""></p>
+            <p><label for=""> Número de teléfono </label></p>
+            <p><input type="tel" name="" id=""></p>
+        </div>
+        <div>
             <p> <h2 class="H1boot">Clase de publicación</h2></p>                    
                     <p><input type="radio" name="" value=""><label for="">Tránsito/Guardería por vacaciones</label></p>
                     <p><label for=""> Desde </label><input type="date" name="" id=""></p>
                     <p><label for=""> Hasta </label><input type="date" name="" id=""></p>
                     <p><input type="radio" name="" value=""><label for="">Adopción permanente</label></p>     
+            <p></p>
             <p><h2 class="H1boot">Características del perro</h2></p>
             <select    class="espacio" class="form-select" aria-label="Default select example">
-                <option selected> Tamaño del perro </option>
+                <p><option selected class="espacio"> Tamaño del perro </option>
                 <option value="1">Perros grandes</option>
-                <option value="2">Perros pequeños</option>
-              </select>
+                <option value="2">Perros pequeños</option></p>
+            </select>
             <select    class="espacio" class="form-select" aria-label="Default select example">
-                <option selected> Edad del perro </option>
+                <p><option selected class="espacio"> Edad del perro </option>
                 <option value="1"> Cachorros </option>
-                <option value="2"> Adultos </option>
-            </select>   
+                <option value="2"> Adultos </option></p>
+            </select> 
             <p></p>
-            <p><label for=""> Cargar imagen aquí </label><input type="url" name="" id=""></p> <!-- CONSULTA 1 ¿Existe y/o vamos a aprender una opción para que el usuario pueda cargar su imagen?=-->
+            <p><label for=""> Cargar imagen aquí </label></p> 
+            <p><input type="url" name="" id=""></p>
+        <div>
             <p><input type="submit"value="ENVIAR"/></p>    
         </form>
        </div> 
