--- a/transito.html
+++ b/transito.html
@@ -27,7 +27,7 @@
     <section> <h1 class="H1boot">Elige transitar la opción que más se amolde a ti</h1></section>
     <MAIN>  
             <form action=""> 
-                <h2 class="H1boot">Características del perro</h2>
+                <h2 class="H1boot" class="espacio" >Características del perro</h2>
                 <select    class="espacio" class="form-select" aria-label="Default select example">
                     <option selected> Tamaño del perro </option>
                     <option value="1">Perros grandes</option>
@@ -38,13 +38,14 @@
                     <option value="1"> Cachorros </option>
                     <option value="2"> Adultos </option>
                   </select>
-            <h2 class="H1boot"> Plazo disponible</h2>
+                <p></p>
+            <h2 class="H1boot"  class="espacio"> Plazo disponible</h2>
                 <p><label for=""> Desde </label><input type="date" name="" id=""></p>
                 <p><label for=""> Hasta </label><input type="date" name="" id=""></p>
                 <p><input type="radio" name="" value=""><label for=""> TIEMPO ILIMITADO </label></p>
-        </form>    
-                <!--La idea es que todos estos funcionen como filtros, para que al darles buscar aparezcan sólo los perros que reúnen esas carácteristicas
-                Para eso todas las secciones deberían relacionarse entre sí. No tengo aún muy en claro como ejecutarlo. ¿Sugerencias?-->
+            </form>
+            <p></p>
+                <!--La idea es que todos estos funcionen como filtros, para que al darles buscar aparezcan sólo los perros que reúnen esas carácteristicas, de modo que todas las secciones se relacionen entre sí.-->
            <form action="">
             <input type="submit"value="BUSCAR"/>
         </form>
