--- a/mision.html
+++ b/mision.html
@@ -28,17 +28,17 @@
         <h1 class="H1boot"> Nosotros - Nuestra misión </h1>
     </section>
     <MAIN   class="mision-caja-chica">
-            <h2 class="H1boot"> Nosotros </h2>
-            Somos un grupoum dolor sit amet oluit Loreit. Vel incidunt numquam, impellat. Minus fugiat, est magni aut voluptates ipsam asperiores consequuntur, incidunt architecto ducimus esse aspernatur. molest obitis illo ullam factemporibus quam aut suscipit ea. dolorem mro minus esse quis molestias ullam minima. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut nostrum tempore et voluptates, porro laboriosam, quisquam, dolores iusto mollitia sed doloremque nam placeat alias animi quibusdam neque. Illo, tempore veritatis. Maxime quod quas eveniet iste sequi iure eius quia labore   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores quidem esse quisquam ut rem aliquid, maiores voluptate natus possimus unde sapiente ducimus veritatis nulla dolore quis nihil qui a ipsa!laborum voluptas dignissimos? Temporibus ab quae eligendi voluptatum sint, sit quo, aliquid obcaecati a, totam fugiat fuga adipisci blanditiis.possimus!Lorem<!-- Uso este texto basura para luego armar bien el texto-->
+           <h2 class="H1boot"> Nosotros </h2>
+            <p>¡Bienvenidos a WEAREDOGSLOVERS! Somos un grupo de proteccionistas independientes que amamos a los animales, particularmente a los perritos. Y esta web está dedicada a ellos. Soñamos con un mundo libre de compraventa de perros, única vía posible para dejar atrás el maltrato y abandono. Y estamos convencidos de que juntos, trabajando en red podemos conseguirlo. </p>   
     </MAIN>
     <aside   class="mision-caja-chica">
-            <h2 class="H1boot">Nuestra misión</h2>
-            Soñamos con un mundo libre de maltrato animaataharum quaerat eius iste reiciendis perferendis animi, culpa neque facilis sunt odio sit perspiciatis reprehenderit dolor? beatae quidem quos cum soluta totam, rem quas ips natus nisi fuga! Eaque quidem dolor id odio omnis repellat ipsa nam, in neque sequi illo. Reiciendis doloremque eius, nam itaque fugit incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam odio nobis numquam possimus et facilis ratione, nostrum laudantium accusantium voluptate corrupti amet nihil perferendis, autem, laboriosam nulla necessitatibus quis dolores! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus veritatis velit sapiente soluta consectetur sunt ipsam explicabo excepturi nemo similique recusandae itaque voluptatibus nam, nesciunt adipisci nulla, exercitationem officiis ut?<!-- Uso este texto basura para luego armar bien el texto-->
-    </aside>
-    
+            <h2 class="H1boot"> El bjetivo de nuestra web </h2>
+            <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que puedan brindar tránsito temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
+        </aside>   
     <footer>
         <p>&COPY;   Tamara Leone</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
+
