--- a/mision.html
+++ b/mision.html
@@ -25,14 +25,14 @@
         </NAv>
     </HEAder>
     <section>
-        <h1 class="H1boot"> Nosotros - Nuestra misión </h1>
+        <h1 class="H1boot"> Nosotros - Nuestro objetivo </h1>
     </section>
     <MAIN   class="mision-caja-chica">
            <h2 class="H1boot"> Nosotros </h2>
             <p>¡Bienvenidos a WEAREDOGSLOVERS! Somos un grupo de proteccionistas independientes que amamos a los animales, particularmente a los perritos. Y esta web está dedicada a ellos. Soñamos con un mundo libre de compraventa de perros, única vía posible para dejar atrás el maltrato y abandono. Y estamos convencidos de que juntos, trabajando en red podemos conseguirlo. </p>   
     </MAIN>
     <aside   class="mision-caja-chica">
-            <h2 class="H1boot"> El bjetivo de nuestra web </h2>
+            <h2 class="H1boot"> El objetivo de nuestra web </h2>
             <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que puedan brindar tránsito temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
         </aside>   
     <footer>
