ok tamaños grandes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <ul>
                 <li class="li-nav"><a href="index.html">Inicio</a></li>
                 <li class="li-nav"><a href="mision.html">Nosotros</a> </li>
-                <li class="li-nav"><a href="adoptar.html">Quiero adoptar</a> </li>
-                <li class="li-nav"><a href="transito.html">Quiero transitar</a> </li>
+                <li class="li-nav"><a href="adoptar.html">Adoptar</a> </li>
+                <li class="li-nav"><a href="transito.html">Transitar</a> </li>
                 <li class="li-nav"><a href="publicar.html">Publicar</a> </li>
             </ul>         
         </NAv>
@@ -27,7 +27,7 @@
     <section><h1   class="H1boot">Enamórate de estas historias y conviértete en la próxima adopción feliz</h1></section>   
     <MAIN>
             <h2 class="H1boot">Historias felices</h2>
-            <p>¡Ellos ya se encontraron!</p>
+            <p>¡Ellos ya se encontraron! Desliza hacia abajo y comparte esta alegría </p>
         <div   class="index-caja-chica">
             <img src="images/hada.jpg" alt="perrita adoptada en su antes y después">
             <img src="images/margui.jpg" alt="perrita adoptada abrazando a una nena">
