--- a/publicar.html
+++ b/publicar.html
@@ -18,8 +18,8 @@
             <ul>
                 <li class="li-nav"><a href="index.html">Inicio</a></li>
                 <li class="li-nav"><a href="mision.html">Nosotros</a> </li>
-                <li class="li-nav"><a href="adoptar.html">Quiero adoptar</a> </li>
-                <li class="li-nav"><a href="transito.html">Quiero transitar</a> </li>
+                <li class="li-nav"><a href="adoptar.html">Adoptar</a> </li>
+                <li class="li-nav"><a href="transito.html">Transitar</a> </li>
                 <li class="li-nav"><a href="publicar.html">Publicar</a> </li>
             </ul>         
         </NAv>
