--- a/mision.html
+++ b/mision.html
@@ -18,8 +18,8 @@
             <ul>
                 <li class="li-nav"><a href="index.html">Inicio</a></li>
                 <li class="li-nav"><a href="mision.html">Nosotros</a> </li>
-                <li class="li-nav"><a href="adoptar.html">Quiero adoptar</a> </li>
-                <li class="li-nav"><a href="transito.html">Quiero transitar</a> </li>
+                <li class="li-nav"><a href="adoptar.html">Adoptar</a> </li>
+                <li class="li-nav"><a href="transito.html">Transitar</a> </li>
                 <li class="li-nav"><a href="publicar.html">Publicar</a> </li>
             </ul>         
         </NAv>
@@ -32,8 +32,8 @@
             <p>¡Bienvenidos a WEAREDOGSLOVERS! Somos un grupo de proteccionistas independientes que amamos a los animales, particularmente a los perritos. Y esta web está dedicada a ellos. Soñamos con un mundo libre de compraventa de perros, única vía posible para dejar atrás el maltrato y abandono. Y estamos convencidos de que juntos, trabajando en red podemos conseguirlo. </p>   
     </MAIN>
     <aside   class="mision-caja-chica">
-            <h2 class="H1boot"> El objetivo de nuestra web </h2>
-            <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que puedan brindar tránsito temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
+            <h2 class="H1boot">Objetivo de la web</h2>
+            <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que deseen tránsito temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
         </aside>   
     <footer>
         <p>&COPY;   Tamara Leone</p>
