--- a/mision.html
+++ b/mision.html
@@ -33,7 +33,7 @@
     </MAIN>
     <aside   class="mision-caja-chica">
             <h2 class="H1boot">Objetivo de la web</h2>
-            <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que deseen tránsito temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
+            <p> Es crear conciencia social y formar una red de contactos que permita establecer un vínculo directo entre protectores que desean dar en adopción perros y aquellas personas que buscan adoptar. Otro posibilidad que brinda es la de relacionar amantes de perros que deseen transitar temporal a  caninos con o sin propietario, fomentando la ayuda mutua. </p>
         </aside>   
     <footer>
         <p>&COPY;   Tamara Leone</p>
