--- a/perros-adultos.html
+++ b/perros-adultos.html
@@ -25,7 +25,7 @@
                   
         </NAv>
     </HEAder>
-    <section> <h1  class="H1boot">Adoptá un adulto y cambia una vida... ¡La tuya!</h1></section>
+    <section> <h1  class="H1boot">Adopta un adulto y cambia una vida... ¡La tuya!</h1></section>
     <MAIN>
         <div class="sec2-caja-grande">
             <div class="fotos-caja-chica">
