--- a/perros-cachorros.html
+++ b/perros-cachorros.html
@@ -25,7 +25,7 @@
                   
         </NAv>
     </HEAder>
-    <section><h1   class="H1boot">¡Adoptá un cachorro y revolucioná tu hogar!</h1></section>
+    <section><h1   class="H1boot">¡Adopta un cachorro y revoluciona tu hogar!</h1></section>
     <main>
     <div class="sec2-caja-grande">       
         <div class="fotos-caja-chica">   
